--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -13,6 +13,8 @@
    "metadata": {},
    "source": [
     "#### 一、提出问题\n",
+    "*有哪些因素会让船上的人生还率更高？*  \n",
+    "舱位等级、性别、年龄等单一因素，或是多个因素共同影响  \n",
     "1.舱位等级是否影响乘客生还率  \n",
     "2.性别是否影响乘客生还率  \n",
     "3.年龄是否影响乘客生还率  \n",
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +203,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -249,15 +251,15 @@
     "def get_result_with_one_factor(factor):\n",
     "    #重组并去除无效数据\n",
     "    survived_df = titanic_df[[factor, 'Survived']].dropna(axis=0)\n",
-    "    group_df = survived_df.groupby(factor)\n",
     "    #分组统计人数\n",
+    "    group_df = survived_df.groupby(factor)\n",
     "    group_num = group_df.sum()\n",
     "    #总人数\n",
     "    all_num = group_df.count()\n",
     "    #存活率\n",
     "    survival_rate = group_num / all_num\n",
     "    #合并数据列表并输出\n",
-    "    result = pd.concat([group_num, all_num, survival_rate], axis=1,)\n",
+    "    result = pd.concat([group_num, all_num, survival_rate], axis=1)\n",
     "    result.columns = ['survived','total','survival rate']\n",
     "    print(result)\n",
     "    #绘制图形\n",
@@ -268,6 +270,13 @@
     "    plt.show()\n",
     "get_result_with_one_factor('Pclass')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
