--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -444,15 +444,22 @@
     }
    ],
    "source": [
+    "#获取结果数据(双因素)\n",
+    "def get_result_with_double_factor(pl, bins=None):\n",
+    "    '''\n",
+    "    pl:分组字段列表\n",
+    "    bins:分区参数\n",
+    "    '''\n",
+    "    group_df = titanic_df.groupby(pl)['Survived']\n",
+    "    group_num = group_df.sum()\n",
+    "    all_num = group_df.count()\n",
+    "    survival_rate = group_num/all_num\n",
+    "    result = pd.concat([group_num, all_num, survival_rate], axis=1)\n",
+    "    result.columns = ['survived','total','survival rate']\n",
+    "    print(result)\n",
+    "    plot_charting(survival_rate, 'bar', 'Pclass & Sex Survival rate', 'Pclass&Sex', 'Survival rate', 1)\n",
     "pl = list(['Pclass', 'Sex'])\n",
-    "group_df = titanic_df.groupby(pl)['Survived']\n",
-    "group_num = group_df.sum()\n",
-    "all_num = group_df.count()\n",
-    "survival_rate = group_num/all_num\n",
-    "result = pd.concat([group_num, all_num, survival_rate], axis=1)\n",
-    "result.columns = ['survived','total','survival rate']\n",
-    "print(result)\n",
-    "plot_charting(survival_rate, 'bar', 'Pclass & Sex Survival rate', 'Pclass&Sex', 'Survival rate', 1)"
+    "get_result_with_double_factor(pl)"
    ]
   },
   {
